✨ Feat : ec2 연결 준비 완료
application-prod.yml 생성